test/classes/marybeth/test_dispatch1-error.good
Error: Type mismatch in assignment from shoe to pumps (test_dispatch1-error.chpl:27)
